2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs
	(xspara_new): Optional conf parameter.
	(xspara_add_next): Propagate 'transparent' argument.
	* tp/Texinfo/Convert/XSParagraph/xspara.c
	(xspara_add_next, xspara__add_next): Update state.last_letter, 
	taking into account 'transparent' argument.

	* tp/t/paragraph.t: Run tests for XSParagraph module as well as 
	Texinfo::Convert::XSParagraph.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c: Remove all comments 
	with out-of-date line numbers for Paragraph.pm.

	* tp/Texinfo/Convert/Paragraph.pm
	(inhibit_end_sentence, remove_end_sentence): Rename.
	(add_end_sentence): New function, split from _add_next.

2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm,
	* tp/Texinfo/Convert/Line.pm,
	* tp/Texinfo/Convert/UnFilled.pm,
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_next): Remove an 
	unused parameter.

2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Clear CFLAGS.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Don't goto a 
	label inside an if (0) { ... } block.

	* tp/Texinfo/Convert/XSParagraph/configure.ac (fetch_conf): New 
	function, to replace fetch_conf.pl script.  Use Perl executable 
	from ${PERL} instead of /usr/bin/env perl, to make it easier for
	the user to use a different perl.

2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (new_formatter): Uncomment 
	line using XSParagraph module.  Don't call XSParagraph::hello.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_hello)
	(xspara_init): Rename.  Specify whether an error occurred in the 
	return value.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Place code in 
	BEGIN block.  Call XSParagraph::init, and on error, replace 