@@ -1,7 +1,19 @@
 # Copyright 2014, 2015 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License,
+# or (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 package XSParagraph;
-require DynaLoader;
 
 use DynaLoader;
 
@@ -142,6 +154,7 @@ goto DONTFALLBACK;
 
 FALLBACK:
   # Fall back to using the Perl code.
+  require Texinfo::Convert::Paragraph;
   *XSParagraph:: = *Texinfo::Convert::Paragraph::;
 DONTFALLBACK: ;
 } # end BEGIN
