@@ -1,3 +1,15 @@
+2015-07-28  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/texi2any.pl: Import fewer modules by default, for speed.  
+	(texi2any --help changed from about 0.4 s to about 0.1 s.).
+	(%formats_table): Store name of required module in 'module' 
+	values of hashes.
+	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Add
+	"require Texinfo::Convert::Paragraph" for fall-back code.
+	* tp/Texinfo/Convert/Plaintext.pm,
+	* tp/Texinfo/Convert/Info.pm: Use Texinfo/Convert/Paragraph.pm 
+	indirectly via Texinfo/Convert/XSParagraph/XSParagraph.pm.
+
 2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs
